--- a/views/artilharia.jade
+++ b/views/artilharia.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en', ng-app='sumulas')
+html(lang='en', ng-app='artilheiros')
 	head
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
@@ -13,11 +13,11 @@ html(lang='en', ng-app='sumulas')
 		script(src='/javascripts/app.js')
 		script(src='/javascripts/controllers.js')
 		script(src='/javascripts/services.js')
-	body(ng-controller='SumulaListCtrl')
+	body(ng-controller='ArtilhariaListCtrl')
 		nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
 			div.navbar-header
-				a.navbar-brand(href='#/sumulas')='Sumulas'
+				a.navbar-brand(href='/Sumula')='Sumulas'
 				a.navbar-brand(href='/Atleta')='Atletas'
-				a.navbar-brand(href='/Artilharia')='Artilharia'
+				a.navbar-brand(href='#/artilheiros')='Artilharia'
 		div.container
 			div(ng-view)
