--- a/views/atleta.jade
+++ b/views/atleta.jade
@@ -18,5 +18,6 @@ html(lang='en', ng-app='atletas')
 			div.navbar-header
 				a.navbar-brand(href='/Sumula')='Sumulas'
 				a.navbar-brand(href='#/atletas')='Atletas'
+				a.navbar-brand(href='/Artilharia')='Artilharia'
 		div.container
 			div(ng-view)
