--- a/public/partials/artilharia/list.html
+++ b/public/partials/artilharia/list.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h1>Artilharia 2016</h1>
+	<h1>Artilharia - 2016</h1>
 </div>
 <div class="row">
 	<div class="col-xs-5">
