--- a/public/partials/sumula/list.html
+++ b/public/partials/sumula/list.html
@@ -20,10 +20,26 @@
 			<em>No sumulas in database. Would you like to <a href="#/newSumula">create one</a>?
 		</li>
 	</ul>
-	<ul ng-switch-default>
-		<li ng-repeat="sumula in sumulas | filter:query">
-			<a href="#/sumula/{{sumula._id}}">{{sumula.data}} - {{sumula.quadro}} - {{sumula.adversario}}</a>
-		</li>
-	</ul>
+<!-- 	<ul ng-switch-default> -->
+<!-- 		<li ng-repeat="sumula in sumulas | filter:query"> -->
+<!-- 			<a href="#/sumula/{{sumula._id}}">{{sumula.data}} - {{sumula.quadro}} - {{sumula.adversario}}</a> -->
+<!-- 		</li> -->
+<!-- 	</ul> -->
+	<table ng-switch-default>
+		<tr>
+			<th>Sumula</th>
+			<th>Data</th>
+			<th>Quadro</th>
+			<th>Adversario</th>
+			<th>Resultado</th>
+		</tr>
+		<tr ng-repeat="sumula in sumulas | filter:query">
+			<td><a href="#/sumula/{{sumula._id}}">{{ $index + 1 }}</a></td>
+			<td>{{sumula.data}}</td>
+			<td>{{sumula.quadro}}</td>
+			<td>{{sumula.adversario}}</td>
+			<td>BSF {{sumula.golsFavor}} x {{sumula.golsContra}} {{sumula.adversario}}</td>			
+		</tr>
+	</table>
 </div>
 <p>&nbsp;</p>
